# hai

./: Readme.md  history.py  inputs.py  main.py  memory.py  motions.py  outputs.py  semantic.py  test.py  texts.json
GraphNet/: word_graph.py  wordgraph.json
image_encoder/: image_encoder.py  inference.py  training.py
minicolumn/: layer.py  neuron.py  synapse.py
neuronet/: .gitignore  CMakeLists.txt  index.html  requirements.txt
neuronet/lib/: CMakeLists.txt  correlation.c  mymath.c  mymath.h  stack_guard.c  stack_guard.h  utils.c  utils.h
neuronet/network/: CMakeLists.txt  network.c  network.h  network_creator.c  network_types.h
neuronet/neurons/: CMakeLists.txt  neuron.c  neuron.h  neuron_linear.c  neuron_mutations.c  neuron_pattern.c  neuron_poly.c  neuron_switch.c  neuron_temporal.c  neuron_types.h
neuronet/python/: check_dll.py  dll_loader.py  interface.py  network.py
neuronet/tests/: CMakeLists.txt  linear_net_backpropagation.py  linear_net_evolution.py  linear_net_instantiation.py  linear_net_seq2seq.py  linear_net_seq2seq_backprop.py  network.cmake  network_linear_test.c  python_tests.cmake  seq2seq_simplified.py  ucore.cmake  ucore_test.c
neuronet/ucore/: CMakeLists.txt  ucore.c  ucore.h
neuronet/word_encoder/: config.py  word_decoder.py  word_encoder.py
scene/: index.html  script.js
text_to_nodes_transformer/: dataset.json  dataset.py  inference.py  model.py  sentences.txt  temp.txt  train.py
